opam-version: "2.0"
name: "cactus"
version: "0.3"
synopsis: "A document compiler"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: "Leandro Ostera <leandro@ostera.io>"
license: "MIT"
homepage: "https//github.com/ostera/cactus"
bug-reports: "https//github.com/ostera/cactus/issues"
depends: [
  "bos"
  "cmdliner"
  "conf-libev"
  "fmt"
  "logs"
  "markup"
  "nproc"
  "ocamlgraph"
  "omd"

  "dune" {build}
  "reason" {build}
  "landmarks" {dev}
]
build: [make "build"]
install: [make "install"]
