opam-version: "2.0"
name: "cactus"
version: "0.4"
synopsis: "A document compiler"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: "Leandro Ostera <leandro@ostera.io>"
license: "MIT"
homepage: "https//github.com/ostera/cactus"
bug-reports: "https//github.com/ostera/cactus/issues"
depends: [
  "cmdliner"
  "fmt"
  "logs"
  "markup"
  "nproc"
  "ocamlgraph"
  "omd"
  "conf-libev"
  "bos"

  "dune" {build}
  "reason" {build}
]
build: [make "build"]
install: [make "install"]
